<resources>
    <string name="app_name">My Application</string>
    <string name="text_error_login">ログインIDまたはパスワードが違います</string>
    <string name="text_label_email_login">ログインID</string>
    <string name="text_label_pass_login">パスワード</string>
    <string name="text_forgot_pass">パスワードを忘れた方はこちら</string>
    <string name="text_login">ログインする</string>
    <string name="text_login_other">別のアカウントを使用する</string>
    <string name="text_version">Version 0.1.2</string>
</resources>