<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:background="@color/color_white"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login"
    >

    <RelativeLayout
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:visibility="visible"
        android:layout_marginStart="30dp"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/ivTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/header_logo"
            android:layout_centerHorizontal="true"
            />

        <RelativeLayout
            android:id="@+id/layoutEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivTitle"
            >

            <RelativeLayout
                android:id="@+id/rlTextError"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                >

                <TextView
                    android:id="@+id/tvErrorLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/text_error_login"
                    android:textColor="@color/color_text_error_login"
                    android:textSize="14dp"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlUsername"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:layout_below="@+id/rlTextError">

                <TextView
                    android:id="@+id/tvUsername"
                    style="@style/text_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_label_email_login"
                    />

                <EditText
                    android:id="@+id/edEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:layout_below="@id/tvUsername"
                    android:lines="1" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:layout_below="@+id/rlUsername">

                <TextView
                    android:id="@+id/tvPass"
                    style="@style/text_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_label_pass_login"
                     />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvPass"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        />

                    <ImageButton
                        android:id="@+id/ivPassword"
                        android:layout_width="25dp"
                        android:layout_height="47dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="12dp"
                        android:layout_marginTop="-3dp"
                        android:background="@null"
                        android:scaleType="fitXY"
                        android:src="@drawable/login_btn_eye_off" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/tvForgotPass"
                    style="@style/text_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_forgot_pass"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    />

            </RelativeLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/colorPrimary"
            android:text="@string/text_login"
            android:textColor="@color/color_white"
            android:textSize="20sp"
            android:layout_below="@+id/layoutEdt"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            />

        <RelativeLayout
            android:id="@+id/tvLoginOther"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_below="@+id/btnLogin"
            >

            <TextView
                android:id="@+id/tvLoginSSO"
                style="@style/text_login"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_login_other"
                android:gravity="center"
                android:visibility="visible"
                />

        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/text_version"
        android:textSize="11sp" />

</RelativeLayout>